--- a/login.html
+++ b/login.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Remino - Log In</title>
+    <link rel="stylesheet" href="login.css"> <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <div class="welcome-panel">
+            <div class="logo-placeholder">
+                <img src="Logo tanpa Background ada buletan.png" alt="logi-remino">
+                </div>
+            <h1 class="welcome-title">WELCOME TO REMINO</h1>
+            <p class="welcome-subtitle">SMART REMINDING SYSTEM</p>
+            <p class="team-signature">By Icikiwir Core Team</p>
+        </div>
 
+        <div class="login-panel">
+            <div class="signup-link">
+                No Account? <a href="#">Sign up</a>
+            </div>
+            <h2 class="login-title">Log in</h2>
+
+            <form class="login-form">
+                <label for="email">Enter your username or email address</label>
+                <input type="email" id="email" name="email" placeholder="Email" required>
+
+                <label for="password">Enter your Password</label>
+                <input type="password" id="password" name="password" placeholder="Password" required>
+                
+                <a href="#" class="forgot-password">Forgot Password</a>
+
+                <button type="submit" class="login-btn">Log in</button>
+            </form>
+        </div>
+    </div>
+</body>
+</html>
