--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>Contact</title>
-  <link rel="stylesheet" href="contact.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Remino - Contact</title>
+    <link rel="stylesheet" href="style/contact.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
-<!-- NAVBAR -->
-<div class="navbar">
-  <div class="nav-left">
-    <img src="Logo tanpa Background ada buletan.png" class="nav-icon">
-    <span>Home</span>
-    <span>Task</span>
-    <span>Contact</span>
-  </div>
-
-  <div class="nav-right">
-    <img src="account.png" class="nav-icon">
-    <span>Log Out</span>
-  </div>
-</div>
+    <nav class="navbar">
+        <div class="nav-left">
+            <div class="nav-logo">
+                <img src="asset/Logo tanpa Background ada buletan.png" alt="Remino Logo">
+            </div>
+            <ul class="nav-links">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="task.html">Task</a></li>
+                <li><a href="#" class="active">Contact</a></li>
+            </ul>
+        </div>
+        <div class="nav-right">
+            <a href="login.html" class="logout-btn">
+                <i class="fas fa-user-circle"></i> Log Out
+            </a>
+        </div>
+    </nav>
 
 <!-- MAIN -->
 <div class="container">
@@ -31,7 +37,7 @@
       <h2 class="black">CONTACT LIST</h2>
       <div class="search-box">
         <input type="text" placeholder="Search">
-        <img src="kacapembesar.webp" class="search-icon">
+        <img src="asset/kacapembesar.webp" class="search-icon">
 </div>
     </div>
 
