--- a/home.html
+++ b/home.html
@@ -16,9 +16,9 @@
                 <img src="asset/Logo tanpa Background ada buletan.png" alt="Remino Logo">
             </div>
             <ul class="nav-links">
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Task</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="home.html" class="active">Home</a></li>
+                <li><a href="task.html">Task</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
@@ -133,5 +133,4 @@
     </div>
 
 </body>
-
 </html>
