--- a/task.html
+++ b/task.html
@@ -16,8 +16,8 @@
             </div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="#" class="active">Task</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="task.html" class="active">Task</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
