--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="task.html">Task</a></li>
-                <li><a href="#" class="active">Contact</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
