--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="login-panel">
-            <h2 class="login-title">Sign In</h2>
+            <h2 class="login-title">Sign in</h2>
 
             <form class="signup-form" method="POST" action="database/signup.php">
                 <label for="gmail">Enter your email address</label>
@@ -27,7 +27,7 @@
                 <label for="username">Enter username</label>
                 <input type="text" id="USERNAME" name="USERNAME" placeholder="Username" required>
 
-                <label for="password">Enter your Password</label>
+                <label for="password">Enter your password</label>
                 <input type="password" id="PASSWORD" name="PASSWORD" placeholder="Password" required>
                 
                 <button type="submit" class="login-btn">Sign in</button>
