--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                 <label for="email">Enter your username or email address</label>
                 <input type="text" id="GMAIL" name="GMAIL" placeholder="Username atau Email" required>
 
-                <label for="password">Enter your Password</label>
+                <label for="password">Enter your password</label>
                 <input type="password" id="PASSWORD" name="PASSWORD" placeholder="Password" required>
                 
 
