--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
 
-            <button class="edit-btn">EDIT</button>
+            <button class="edit-btn" onclick="window.location.href='task.html';">EDIT</button>
         </div>
     </div>
 
