--- a/task.html
+++ b/task.html
@@ -29,7 +29,7 @@
 
   <main class="task-container">
     <section class="form-section">
-      <button class="add-contact-btn">ADD CONTACT</button>
+      <button class="add-contact-btn" onclick="window.location.href='contact.html';">ADD CONTACT</button>
 
       <form class="task-form">
         <label>New Task</label>
