--- a/task.html
+++ b/task.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style/task.css" />
-  <title>Remino - Task Page</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/style/task.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <title>Remino - Task</title>
 </head>
 <body>
     <nav class="navbar">
@@ -16,8 +15,8 @@
             </div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="task.html" class="active">Task</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#" class="active">Task</a></li>
+                <li><a href="contact.html" >Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
@@ -29,7 +28,7 @@
 
   <main class="task-container">
     <section class="form-section">
-      <button class="add-contact-btn" onclick="window.location.href='contact.html';">ADD CONTACT</button>
+      <button class="add-contact-btn">ADD CONTACT</button>
 
       <form class="task-form">
         <label>New Task</label>
