--- a/task.html
+++ b/task.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/style/task.css" />
+  <link rel="stylesheet" href="style/task.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <title>Remino - Task</title>
 </head>
@@ -72,3 +72,4 @@
 </body>
 
 </html>
+
